5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1822_3182.log
== TEST (2019-06-13 11:29:38) 
-- CODE:
from numpy import*

 n = array(eval(input('')))
	
for i in n:
	print(n[i])
-- ERROR:
File "XXXX", line 3
    n = array(eval(input('')))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:29:50) 
-- CODE:
from numpy import*

n = array(eval(input('')))
	
for i in n:
	print(n[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
